fix scrollbar

--- a/src/assets/scss/dashboard/_chart.scss
+++ b/src/assets/scss/dashboard/_chart.scss
@@ -91,7 +91,7 @@
 }
 
 .chart-container-statistics-pie {
-  width: 80vh;
+  width: 70vh;
   margin: auto;
   @media (max-width: 991px) {
     width: 95vw;
